DBへのログ情報保存を実装，タスクトレイ常駐機能の実装

--- a/VRChatLogWathcer/VRChatLogWathcer.csproj
+++ b/VRChatLogWathcer/VRChatLogWathcer.csproj
@@ -1,14 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
+		<Nullable>enable</Nullable>
+		<EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
+		<ApplicationIcon>Resources\icon.ico</ApplicationIcon>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="LivetCask" Version="4.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+	  <None Remove="Resources\green.ico" />
+	  <None Remove="Resources\icon.ico" />
+	  <None Remove="Resources\taskbar.ico" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Resource Include="Resources\icon.ico" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="LivetCask" Version="4.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 
 </Project>
