--- a/VRChatLogWathcer/VRChatLogWathcer.csproj
+++ b/VRChatLogWathcer/VRChatLogWathcer.csproj
@@ -27,10 +27,19 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="NLog" Version="4.7.14" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="nlog.config">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
