アイコンを追加してUIを改善

--- a/VRChatLogWathcer/VRChatLogWathcer.csproj
+++ b/VRChatLogWathcer/VRChatLogWathcer.csproj
@@ -23,6 +23,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="LivetCask" Version="4.0.2" />
+		<PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
 			<PrivateAssets>all</PrivateAssets>
