--- a/VRChatLogWathcer/VRChatLogWathcer.csproj
+++ b/VRChatLogWathcer/VRChatLogWathcer.csproj
@@ -8,9 +8,30 @@
 		<Nullable>enable</Nullable>
 		<EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
 		<ApplicationIcon>Resources\icon.ico</ApplicationIcon>
-		<VersionPrefix>1.1.2</VersionPrefix>
+		<VersionPrefix>1.1.3</VersionPrefix>
 		<VersionSuffix></VersionSuffix>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <COMReference Include="Shell32">
+	    <WrapperTool>tlbimp</WrapperTool>
+	    <VersionMinor>0</VersionMinor>
+	    <VersionMajor>1</VersionMajor>
+	    <Guid>50a7e9b0-70ef-11d1-b75a-00a0c90564fe</Guid>
+	    <Lcid>0</Lcid>
+	    <Isolated>false</Isolated>
+	    <EmbedInteropTypes>true</EmbedInteropTypes>
+	  </COMReference>
+	  <COMReference Include="SHDocVw">
+	    <WrapperTool>tlbimp</WrapperTool>
+	    <VersionMinor>1</VersionMinor>
+	    <VersionMajor>1</VersionMajor>
+	    <Guid>eab22ac0-30c1-11cf-a7eb-0000c05bae0b</Guid>
+	    <Lcid>0</Lcid>
+	    <Isolated>false</Isolated>
+	    <EmbedInteropTypes>true</EmbedInteropTypes>
+	  </COMReference>
+	</ItemGroup>
 
 
 	<ItemGroup>
@@ -26,6 +47,9 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.49-beta">
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="NLog" Version="5.0.0" />
 		<PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
 		<PackageReference Include="ReactiveProperty" Version="8.2.0" />
