P/InvokeにLibraryImport属性を使用するように変更

--- a/VRChatLifelog/VRChatLifelog.csproj
+++ b/VRChatLifelog/VRChatLifelog.csproj
@@ -10,6 +10,7 @@
 		<ApplicationIcon>Resources\icon.ico</ApplicationIcon>
 		<VersionPrefix>1.1.4</VersionPrefix>
 		<VersionSuffix></VersionSuffix>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 
